# cartesi-notary-office-dapp

./: CLAUDE.md  Cargo.toml  Dockerfile  IMPLEMENTATION_PLAN.md  PROJECT_GUIDE.md  README.md  contract.txt
.cargo/: README.md
docs/: API.md
scripts/: demo.sh
src/: handlers.rs  lib.rs  main.rs
src/application/: mod.rs  notarize.rs  types.rs  verify.rs
src/domain/: document.rs  mod.rs  receipt.rs
src/infrastructure/: cartesi.rs  database.rs  mod.rs
tests/integration/: helpers.rs  mock_server.rs  mod.rs  rollup_tests.rs
tests/unit/: database_tests.rs  domain_tests.rs  mod.rs  usecase_tests.rs
